[tool.poetry]
name = "pandas-multi-index"
version = "0.1.0"
description = ""
authors = ["GlennViroux <glenn.viroux@gmail.com>"]
readme = "README.md"
packages = [{include = "pandas_multi_index"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
jupyter = "^1.0.0"
pydantic = "^1.10.9"
matplotlib = "^3.7.1"
pycountry = "^22.3.5"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
